# crown

./: .gitignore  .gitmodules  1  2  Cargo.toml  README.md  abstract.md  analyse.sh  avl.mir  benchmark_statistics.csv  benchmark_statistics.sh  buffer.def_use  buffer.out  buffer_simple.mir  buffer_simple.out  build.rs  check.sh  evaluate.sh  evaluation.csv  evaluation.sh  ezxml.out  find_entry.sh  impact.sh  libtree.def_use  llist.mir  mkcomparison.sh  new  ownership_dominance.md  preprocess.sh  regression-invocations  regression.sh  rewrite.sh  run.sh  run_all.sh  run_bench.sh  run_rewrite.sh  rust-toolchain  rust-toolchain.toml  rustfmt.toml  sort.sh  (+4 more)
core/analysis/: Cargo.toml
core/analysis/src/: api.rs  array_analysis.rs  boundary_model.rs  call_graph.rs  def_use.rs  fat_thin_analysis.rs  fatness_analysis.rs  lattice.rs  lib.rs  libcall_model.rs  liveness_analysis.rs  must_null_analysis.rs  mutability_analysis.rs  null_analysis.rs  ownership.rs  ownership_analysis.rs  pointer_analysis.rs  required_mutability.rs  ssa.rs  test.rs  usage_analysis.rs
core/analysis/src/array_analysis/: infer.rs  solve.rs  test.rs
core/analysis/src/fat_thin_analysis/: infer.rs  solve.rs  test.rs
core/analysis/src/mutability_analysis/: infer.rs
core/analysis/src/ownership_analysis/: infer.rs  test.rs
core/analysis/src/pointer_analysis/: andersen.rs  constraint_generation.rs  ctxt.rs
core/analysis/src/ssa/: body_ext.rs  rename.rs  test.rs
core/analysis/src/toy_analysis/: complex_place_reporter.rs  place_tracer.rs
core/crustr_analysis/: Cargo.toml
core/crustr_analysis/proptest-regressions/array_analysis/: solve.txt
core/crustr_analysis/src/: array_analysis.rs  call_graph.rs  def_use.rs  lib.rs  liveness_analysis.rs  null_analysis.rs  pointer_analysis.rs  slice_analysis.rs  ssa.rs  test.rs  ty_ext.rs
core/crustr_analysis/src/array_analysis/: infer.rs  intra.rs  solve.rs  test.rs
core/crustr_analysis/src/ownership_analysis/: constraint_generation.rs  constraint_system.rs
core/crustr_analysis/src/pointer_analysis/: constraint_generation.rs
core/crustr_analysis/src/slice_analysis/: intra.rs
core/crustr_analysis/src/ssa/: body_ext.rs  pretty.rs  rename.rs  test.rs
core/crustr_analysis/src/toy_analysis/: place_tracer.rs  unused_ptr_decl.rs
core/crustr_passes/: Cargo.toml
core/crustr_passes/src/: initial_rewrite.rs  lib.rs  print_struct.rs  test.rs
core/refactor/: Cargo.toml
core/refactor/src/: lib.rs  ptr_rewrite.rs  rewrite.rs
core/rewriter/: Cargo.toml
core/rewriter/src/: lib.rs
crates/alias/: Cargo.toml
crates/alias/src/: lib.rs  steensgaard.rs
crates/analysis/: Cargo.toml
crates/analysis/src/: body_ext.rs  call_graph.rs  flow.rs  lattice.rs  lib.rs  lints.rs  noalias_params.rs  output_params.rs  ownership.rs  param_qualifier.rs  ptr.rs  read_only_params.rs  rustc_properties.rs  ssa.rs  statistics.rs  struct_ctxt.rs  struct_topology.rs  type_qualifier.rs  use_def.rs
crates/common/: Cargo.toml
crates/common/src/: data_structure.rs  discretization.rs  lib.rs  macros.rs  rewrite.rs  struct_dependency.rs  test.rs  test_infra.rs  tracing_setup.rs
crates/empirical-study/: Cargo.toml
crates/empirical-study/src/: lib.rs
crates/preprocess/: Cargo.toml
crates/preprocess/src/: char_array_transmute.rs  ensure_null.rs  explicit_addr.rs  fold_let_ref_mut.rs  lib.rs  linkage.rs  promote_argument.rs  signal_nullness.rs
crates/refactor/: Cargo.toml
crates/refactor/src/: lib.rs  rewrite_fn.rs  rewrite_ty.rs
crates/utils/: Cargo.toml
crates/utils/src/: captures.rs  compiler_interface.rs  discretization.rs  lib.rs  macros.rs  rewrite.rs  struct_dependency.rs  tracing_setup.rs
orc-common/: Cargo.toml
orc-common/src/: data_structure.rs  item_set.rs  lib.rs  macros.rs  rewrite.rs  rewriter.rs  struct_dependency.rs  test_infra.rs  two_level_discretization.rs  whole_crate_discretization.rs
orc-common/src/data_structure/: assoc.rs  vec_array.rs
orc-ownership-analysis/: Cargo.toml
orc-ownership-analysis/src/: analysis.rs  call_graph.rs  lib.rs  playground.rs  ptr.rs  rustc_properties.rs  struct_topology.rs  utils.rs
orc-ownership-analysis/src/analysis/: body_ext.rs  constants.rs  constraint.rs  consume.rs  def.rs  def_sites.rs  dom.rs  join_points.rs  place_ext.rs  state.rs  ty.rs  ty_ext.rs
orc-ownership-analysis/src/sparse_bit_vector/: tests.rs
orc-ownership-analysis/src/utils/: graph_ext.rs
orc-refactor/: Cargo.toml
orc-refactor/src/: lib.rs  rewrite.rs
orc-refactor/src/rewrite/: rewrite_body.rs
orc-taint-analysis/: Cargo.toml
orc-taint-analysis/src/: lib.rs  steensgaard.rs
orc-taint-analysis/src/steensgaard/: constraint.rs  test.rs
ownership-analysis/: Cargo.toml
ownership-analysis/src/: analysis.rs  body_ext.rs  boundary_model.rs  call_graph.rs  constants.rs  def_use.rs  fat_thin_analysis.rs  lattice.rs  lib.rs  libcall_model.rs  liveness_analysis.rs  macros.rs  mutability_analysis.rs  null_analysis.rs  ownership.rs  ownership_analysis.rs  place_ext.rs  playground.rs  required_mutability.rs  ssa.rs  sssa.rs  struct_topology.rs  test.rs  ty_ext.rs  utils.rs
ownership-analysis/src/analysis/: body_ext.rs  constants.rs  def_sites.rs  join_points.rs  sssa.rs  state.rs
ownership-analysis/src/fat_thin_analysis/: infer.rs  solve.rs
ownership-analysis/src/mutability_analysis/: infer.rs
ownership-analysis/src/ownership_analysis/: infer.rs
ownership-analysis/src/ssa/: body_ext.rs  pretty.rs  rename.rs
ownership-analysis/src/utils/: graph_ext.rs  range_ext.rs
refactorer/crustr_analysis/: Cargo.toml
refactorer/crustr_analysis/src/: call_graph.rs  complex_place_reporter.rs  def_use.rs  interprocedural.rs  labeled.rs  lib.rs  liveness_analysis.rs  ownership_analysis.rs  place_tracer.rs  pointer_analysis.rs  slice_analysis.rs  ssa.rs  toy_analysis.rs  unused_ptr_decl.rs
refactorer/crustr_mir_passes/: Cargo.toml
refactorer/crustr_mir_passes/src/: lib.rs  unused_ptr_decl.rs
refactorer/crustr_rustc_interface/: Cargo.toml
refactorer/crustr_rustc_interface/src/: collect_structs.rs  lib.rs  test_rewrite_struct.rs  toy_run.rs
(+2343 files in other folders)
