[workspace]
members = [
    "crates/common",
    "crates/preprocess",
    "crates/analysis",
    "crates/alias",
    "crates/empirical-study",
    "crates/refactor",
    "usage-analysis",
    "old_refactor",
    "ownership-analysis"
]

[package]
name = "orc"
version = "0.0.1"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
common = { path = "crates/common" }
preprocess = { path = "crates/preprocess" }
analysis = { path = "crates/analysis" }
ownership-analysis = { path = "ownership-analysis" }
alias = { path = "crates/alias" }
usage-analysis = { path = "usage-analysis" }
old_refactor = { path = "old_refactor" }
empirical-study = { path = "crates/empirical-study" }
clap = { version = "3.1.2", features = ["derive"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }
anyhow = "1.0"
# jemallocator = "0.5"
