[workspace]
members = [
    "crates/common",
    "crates/preprocess",
    "crates/analysis",
    "crates/alias",
    "crates/empirical-study",
    "crates/refactor",
    "crates/rustc-properties",
]

[package]
name = "crown"
version = "0.0.1"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
common = { path = "crates/common" }
preprocess = { path = "crates/preprocess" }
analysis = { path = "crates/analysis" }
alias = { path = "crates/alias" }
refactor = { path = "crates/refactor" }
rustc-properties = { path = "crates/rustc-properties" }
empirical-study = { path = "crates/empirical-study" }
clap = { version = "3.1.2", features = ["derive"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }
anyhow = "1.0"
# jemallocator = "0.5"
