[workspace]
members = [
    "crates/common",
    "crates/preprocess",
    "crates/analysis",
    "crates/alias",
    "crates/empirical-study",
    "crates/refactor",
    "crates/rustc-properties",
]

[package]
name = "crown"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
common = { path = "crates/common" }
preprocess = { path = "crates/preprocess" }
analysis = { path = "crates/analysis" }
alias = { path = "crates/alias" }
refactor = { path = "crates/refactor" }
rustc-properties = { path = "crates/rustc-properties" }
empirical-study = { path = "crates/empirical-study" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
clap = { version = "4.1", features = ["derive"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }
anyhow = "1.0"
cli-table = "0.4"


[build-dependencies]
libc = "0.2"
c2rust-bitfields-derive = "0.2"
c2rust-bitfields = "0.3.0"
num-traits = "0.2"


[target.'cfg(target_arch = "x86_64")'.build-dependencies]
f128 = "0.2"
