[package]
name = "orc-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
petgraph = "0.6"
static_assertions = "1.1.0"
once_cell = "1.13.0"
tracing-subscriber = "0.3.10"
rustfix = "0.6"
