[package]
name = "orc-ownership-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private = true


[dependencies]
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
smallvec = { version = "1.9.0", features = ["union", "const_generics"] }
derivative = "2.2.0"
colored = "2"
once_cell = "1.13.0"
proptest = "1.0.0"
rustfix = "0.6.0"
clap = { version = "3.1.2", features = ["derive"] }
rand = "0.8.4"
petgraph = "0.6.2"
static_assertions = "1.1.0"
orc-common = { path = "../orc-common" }