[package]
name = "orc-refactor"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
orc-common = { path = "../orc-common" }
usage-analysis = { path = "../usage-analysis" }

clap = { version = "3.1.2", features = ["derive"] }
itertools = "0.10.3"
rustfix = "0.6.0"
smallvec = { version = "1.8.0", features = ["union", "const_generics"] }
tracing = "0.1.32"
