[package]
name = "ownership-analysis"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }
once_cell = "1.13.0"
graph_ext = { path = "../utils/graph_ext" }
smallvec = "1.9.0"