[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private = true


[dependencies]
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
graph = { path = "../utils/graph" }
range_ext = { path = "../utils/range_ext" }
compiler_interface = { path = "../compiler_interface" }
# instrumented_rustc_mir_dataflow = { path = "../../instrumented_rustc_mir_dataflow" }
smallvec = { version = "1.8.0", features = ["union", "const_generics"] }
# ndarray = "0.15.4"
derivative = "2.2.0"
colored = "2"
once_cell = "1.9.0"
proptest = "1.0.0"
