[package]
name = "crustr_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private=true 


[dependencies]
log = "0.4"
graph = { path = "../utils/graph" }
compiler_interface = { path = "../compiler_interface" }
smallvec = "1.8.0"
derivative = "2.2.0"
env_logger = "0.9"
colored = "2"
once_cell = "1.9.0"

[env]
RUST_LOG = "debug"