[package]
name = "crustr_passes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private=true 

[dependencies]
log = "0.4"
crustr_rewrite = { path = "../crustr_rewrite" }
compiler_interface = { path = "../compiler_interface" }
crustr_analysis = { path = "../crustr_analysis" }