[package]
name = "refactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private=true 

[dependencies]
log = "0.4"
rewriter = { path = "../rewriter" }
compiler_interface = { path = "../compiler_interface" }
analysis = { path = "../analysis" }
itertools = "0.10.3"