[package]
name = "refactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private=true 

[dependencies]
rewriter = { path = "../rewriter" }
compiler_interface = { path = "../compiler_interface" }
analysis = { path = "../analysis" }
itertools = "0.10.3"
smallvec = { version = "1.8.0", features = ["union", "const_generics"] }
tracing = "0.1.32"
