[package]
name = "rewriter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private=true 


[dependencies]
analysis = { path = "../analysis" }
rustfix = "0.6.0"
clap = { version = "3.1.2", features = ["derive"] }