[package]
name = "alias"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.rust-analyzer]
rustc_private = true


[dependencies]
petgraph = "0.6.2"
static_assertions = "1.1.0"
tracing = "0.1"
common = { path = "../common" }
