[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private = true


[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
smallvec = { version = "1.9.0", features = ["union", "const_generics", "const_new", "serde"] }
indexmap = "1.9"
derivative = "2.2"
colored = "2"
once_cell = "1.13"
proptest = "1.0.0"
rustfix = "0.6"
clap = { version = "4.1", features = ["derive"] }
rand = "0.8"
petgraph = "0.6"
static_assertions = "1.1"
thiserror = "1.0"
anyhow = "1.0"
cadical = "0.1"
z3 = { version = "0.11.2", features = ["static-link-z3"] }
itertools = "0.10"
# bumpalo = { version = "3.9", features = ["allocator_api"] }
common = { path = "../common" }
alias = { path = "../alias" }
