[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
clap = { version = "4.1", features = ["derive"] }
smallvec = { version = "1.9.0", features = ["union", "const_generics"] }
petgraph = "0.6"
static_assertions = "1.1.0"
once_cell = "1.13.0"
tracing-subscriber = "0.3.10"
rustfix = "0.6"
similar = "2.2"
# lending-iterator = "0.1.6"
