[package]
name = "preprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
rustfix = "0.6"
petgraph = "0.6"
common = { path = "../common" }
regex = "1.7"
similar = "2.2"
