[package]
name = "refactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
rustfix = "0.6"
tracing = "0.1"
itertools = "0.10"
smallvec = { version = "1.8.0", features = ["union", "const_generics"] }
anyhow = "1.0"
common = { path = "../common" }
analysis = { path = "../analysis" }
alias = { path = "../alias" }
once_cell = "1"
syn = { version = "1", features = ["full", "printing"] }
proc-macro2 = "1"
clap = { version = "4.1", features = ["derive"] }
regex = "1.7"
